force-app/main/default/objects/Account/fields/approval_status__c.field-meta.xml
<CustomField>
    <fullName>approval_status__c</fullName>
    <label>approval status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFA</fullName>
            </value>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>