force-app/main/default/objects/Account/fields/AreaNumber__c.field-meta.xml
<CustomField>
    <fullName>AreaNumber__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Area Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>