force-app/main/default/objects/Account/fields/courseinfo__c.field-meta.xml
<CustomField>
    <fullName>courseinfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>course</label>
    <referenceTo>course__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>