force-app/main/default/objects/Account/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <label>discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>