force-app/main/default/objects/Account/fields/Discount_amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_amount__c</fullName>
    <formula>fee__c  *  discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>