force-app/main/default/objects/Account/fields/fee__c.field-meta.xml
<CustomField>
    <fullName>fee__c</fullName>
    <label>fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>