force-app/main/default/objects/Account/fields/manager_disc__c.field-meta.xml
<CustomField>
    <fullName>manager_disc__c</fullName>
    <label>manager disc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>