force-app/main/default/objects/Account/fields/Wells_Fargo_Check__c.field-meta.xml
<CustomField>
    <fullName>Wells_Fargo_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wells Fargo Check</label>
    <type>Checkbox</type>
</CustomField>