force-app/main/default/objects/Account/recordTypes/checking.recordType-meta.xml
<RecordType>
    <fullName>checking</fullName>
    <active>true</active>
    <label>checking</label>
</RecordType>